// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table Basic Table 1`] = `
<div
  className="sc-ezWOiH cseTil"
  data-element="tableWrapper"
>
  <table
    className="sc-bZkfAO bGwcNz"
    data-element="table"
  >
    <thead
      className="sc-ciZhAO dpuqFH"
    >
      
      
      <tr>
        <td
          className="sc-jIZahH sc-himrzO lkBcUc dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO jrZvoz dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Empty Data Table 1`] = `
<div
  className="sc-ezWOiH cseTil"
  data-element="tableWrapper"
>
  <table
    className="sc-bZkfAO bGwcNz"
    data-element="table"
  >
    <thead
      className="sc-ciZhAO dpuqFH"
    >
      
      
      <tr>
        <td
          className="sc-jIZahH sc-himrzO lkBcUc dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO jrZvoz dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-jIZahH CGbrM"
          colSpan={5}
        >
          There is no data loaded.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Expandable table 1`] = `
<div
  className="sc-ezWOiH cseTil"
  data-element="tableWrapper"
>
  <table
    className="sc-bZkfAO bGwcNz"
    data-element="table"
  >
    <thead
      className="sc-ciZhAO dpuqFH"
    >
      
      
      <tr>
        <td
          className="sc-jIZahH sc-himrzO lkBcUc dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO jrZvoz dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Borrow APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO dCUMgB dDMa-dg"
          width={100}
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Action
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ glcfhk jriGrI"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ glcfhk jriGrI"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ glcfhk jriGrI"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ glcfhk jriGrI"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Title As Component 1`] = `
<div
  className="sc-ezWOiH cseTil"
  data-element="tableWrapper"
>
  <table
    className="sc-bZkfAO bGwcNz"
    data-element="table"
  >
    <thead
      className="sc-ciZhAO dpuqFH"
    >
      <tr>
        <td
          className="sc-bZnhIo hROyZp"
          colSpan={5}
        >
          <div>
            Your deposit
          </div>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH sc-himrzO kyTpVH eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO lgtXSn eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO lgtXSn eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO lgtXSn eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO cAjTxQ eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-jIZahH kyTpVH"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-jIZahH lgtXSn"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH lgtXSn"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH lgtXSn"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cAjTxQ"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH kyTpVH"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-jIZahH lgtXSn"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH lgtXSn"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH lgtXSn"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cAjTxQ"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH kyTpVH"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-jIZahH lgtXSn"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH lgtXSn"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH lgtXSn"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cAjTxQ"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH kyTpVH"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-jIZahH lgtXSn"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH lgtXSn"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH lgtXSn"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cAjTxQ"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Title As Plain Text 1`] = `
<div
  className="sc-ezWOiH cseTil"
  data-element="tableWrapper"
>
  <table
    className="sc-bZkfAO bGwcNz"
    data-element="table"
  >
    <thead
      className="sc-ciZhAO dpuqFH"
    >
      <tr>
        <td
          className="sc-jdAMXn etFNKQ"
          colSpan={5}
        >
          Assets to deposit
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH sc-himrzO lkBcUc eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO jrZvoz eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table With Footer 1`] = `
<div
  className="sc-ezWOiH cseTil"
  data-element="tableWrapper"
>
  <table
    className="sc-bZkfAO bGwcNz"
    data-element="table"
  >
    <thead
      className="sc-ciZhAO dpuqFH"
    >
      
      
      <tr>
        <td
          className="sc-jIZahH sc-himrzO lkBcUc dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO CGbrM dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO jrZvoz dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH lkBcUc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH CGbrM"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH jrZvoz"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
    <tfoot
      className="sc-iTONeN gtuFum c-table__footer"
    >
      <td
        className="sc-jIZahH CGbrM"
        colSpan={5}
      >
        <div>
          Footer component
        </div>
      </td>
    </tfoot>
  </table>
</div>
`;
